--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "license": "MIT",
   "scripts": {
     "develop": "nodemon --exec babel-node src/www.js",
-    "start": "node dist/app.js",
-    "heroku-postbuild": "rm -rf dist && babel src --out-dir dist",
+    "start": "node dist/www.js",
     "build": "rm -rf dist && babel src --out-dir dist",
     "postinstall": "npm run build"
   },
